--- a/package.json
+++ b/package.json
@@ -85,67 +85,18 @@
       "prool": "patches/prool.patch"
     },
     "overrides": {
-      "follow-redirects@<1.15.4": "1.15.4",
-      "follow-redirects@<=1.15.5": "1.15.6",
-      "undici@<5.28.4": "5.28.4",
-      "braces@<3.0.3": "3.0.3",
       "ws@>=8.0.0 <8.17.1": "8.17.1",
-      "ws@>=7.0.0 <7.5.10": "7.5.10",
-      "@nuxt/devtools@<1.3.9": "1.3.9",
       "elliptic@>=4.0.0 <=6.5.6": "6.5.7",
       "elliptic@>=2.0.0 <=6.5.6": "6.5.7",
       "elliptic@>=5.2.1 <=6.5.6": "6.5.7",
-      "micromatch@<4.0.8": "4.0.8",
-      "zod@<=3.22.2": "3.22.3",
-      "next@>=14.0.0 <14.2.10": "14.2.10",
-      "vite@>=5.2.0 <5.2.14": "5.2.14",
-      "rollup@>=4.0.0 <4.22.4": "4.22.4",
-      "secp256k1@>=4.0.0 <4.0.4": "4.0.4",
-      "next@>=10.0.0 <14.2.7": "14.2.7",
-      "send@<0.19.0": "0.19.0",
-      "serve-static@<1.16.0": "1.16.0",
-      "nuxt@>=3.4.0 <3.12.4": "3.12.4",
-      "smol-toml@<=1.3.0": "1.3.1",
-      "semver@<5.7.2": "5.7.2",
       "nanoid@<3.3.8": "3.3.8",
-      "nanoid@>=4.0.0 <5.0.9": "5.0.9",
       "elliptic@<6.5.6": "6.5.6",
-      "next@>=14.0.0 <14.2.21": "14.2.21",
-      "undici@>=4.5.0 <5.28.5": "5.28.5",
-      "@nuxt/vite-builder@>=3.8.1 <3.15.3": "3.15.3",
       "esbuild@<=0.24.2": "0.25.0",
-      "vite@>=5.0.0 <=5.4.11": "5.4.12",
       "elliptic@<=6.6.0": "6.6.1",
-      "nuxt@>=3.0.0 <3.16.0": "3.16.0",
-      "vite@>=5.0.0 <5.4.15": "5.4.15",
-      "vite@>=5.0.0 <5.4.16": "5.4.16",
-      "vite@>=5.0.0 <5.4.18": "5.4.18",
       "cookie@<0.7.0": "0.7.0",
-      "@babel/runtime@<7.26.10": "7.26.10",
-      "vite@>=5.0.0 <=5.4.18": "5.4.19",
-      "base-x@<=3.0.10": "3.0.11",
-      "vite@>=5.0.0 <5.4.17": "5.4.17",
-      "next@<14.2.24": "14.2.24",
-      "nuxt@<3.12.4": "3.12.4",
-      "undici@<5.29.0": "5.29.0",
-      "cross-spawn@>=7.0.0 <7.0.5": "7.0.5",
       "serialize-javascript@>=6.0.0 <6.0.2": "6.0.2",
-      "brace-expansion@>=1.0.0 <=1.1.11": "1.1.12",
-      "brace-expansion@>=2.0.0 <=2.0.1": "2.0.2",
-      "next@>=13.0 <14.2.30": "14.2.30",
-      "pbkdf2@<=3.1.2": "3.1.3",
-      "pbkdf2@>=3.0.10 <=3.1.2": "3.1.3",
       "elliptic@<6.6.0": "6.6.0",
-      "tmp@<=0.2.3": "0.2.4",
-      "devalue@<5.3.2": "5.3.2",
-      "next@>=0.9.9 <14.2.31": "14.2.31",
-      "vite@<=5.4.19": "5.4.20",
-      "next@>=14.0.0 <14.2.25": "14.2.25",
-      "next@>=9.5.5 <14.2.15": "14.2.15",
-      "next@>=0.9.9 <14.2.32": "14.2.32",
-      "sha.js@<=2.4.11": "2.4.12",
-      "cipher-base@<=1.0.4": "1.0.5",
-      "nuxt@>=3.6.0 <3.19.0": "3.19.0"
+      "tmp@<=0.2.3": "0.2.4"
     }
   },
   "simple-git-hooks": {
