--- a/packages/create-wagmi/templates/next/package.json
+++ b/packages/create-wagmi/templates/next/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "5.45.1",
-    "next": "14.2.4",
+    "next": "^15.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "latest",
