--- a/package.json
+++ b/package.json
@@ -83,6 +83,20 @@
     },
     "patchedDependencies": {
       "prool": "patches/prool.patch"
+    },
+    "overrides": {
+      "ws@>=8.0.0 <8.17.1": "8.17.1",
+      "elliptic@>=4.0.0 <=6.5.6": "6.5.7",
+      "elliptic@>=2.0.0 <=6.5.6": "6.5.7",
+      "elliptic@>=5.2.1 <=6.5.6": "6.5.7",
+      "nanoid@<3.3.8": "3.3.8",
+      "elliptic@<6.5.6": "6.5.6",
+      "esbuild@<=0.24.2": "0.25.0",
+      "elliptic@<=6.6.0": "6.6.1",
+      "cookie@<0.7.0": "0.7.0",
+      "serialize-javascript@>=6.0.0 <6.0.2": "6.0.2",
+      "elliptic@<6.6.0": "6.6.0",
+      "tmp@<=0.2.3": "0.2.4"
     }
   },
   "simple-git-hooks": {
