docs: add llms.txt

--- a/site/package.json
+++ b/site/package.json
@@ -22,6 +22,7 @@
     "unocss": "^0.59.4",
     "viem": "2.*",
     "vitepress": "1.5.0",
+    "vitepress-plugin-llms": "^1.7.5",
     "vue": "catalog:",
     "wagmi": "workspace:*"
   }
