--- a/package.json
+++ b/package.json
@@ -85,18 +85,39 @@
       "prool": "patches/prool.patch"
     },
     "overrides": {
-      "ws@>=8.0.0 <8.17.1": "8.17.1",
-      "elliptic@>=4.0.0 <=6.5.6": "6.5.7",
-      "elliptic@>=2.0.0 <=6.5.6": "6.5.7",
-      "elliptic@>=5.2.1 <=6.5.6": "6.5.7",
-      "nanoid@<3.3.8": "3.3.8",
-      "elliptic@<6.5.6": "6.5.6",
-      "esbuild@<=0.24.2": "0.25.0",
-      "elliptic@<=6.6.0": "6.6.1",
+      "@babel/runtime@<7.26.10": ">=7.26.10",
+      "base-x@<=3.0.10": ">=3.0.11",
+      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2",
+      "braces@<3.0.3": ">=3.0.3",
+      "cipher-base@<=1.0.4": ">=1.0.5",
       "cookie@<0.7.0": "0.7.0",
-      "serialize-javascript@>=6.0.0 <6.0.2": "6.0.2",
+      "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+      "elliptic@<6.5.6": "6.5.6",
       "elliptic@<6.6.0": "6.6.0",
-      "tmp@<=0.2.3": "0.2.4"
+      "elliptic@<=6.6.0": ">=6.6.1",
+      "elliptic@>=2.0.0 <=6.5.6": "6.5.7",
+      "elliptic@>=4.0.0 <=6.5.6": "6.5.7",
+      "elliptic@>=5.2.1 <=6.5.6": "6.5.7",
+      "esbuild@<=0.24.2": "0.25.0",
+      "follow-redirects@<1.15.4": ">=1.15.4",
+      "follow-redirects@<=1.15.5": ">=1.15.6",
+      "micromatch@<4.0.8": ">=4.0.8",
+      "nanoid@<3.3.8": "3.3.8",
+      "pbkdf2@<=3.1.2": ">=3.1.3",
+      "pbkdf2@>=3.0.10 <=3.1.2": ">=3.1.3",
+      "secp256k1@>=4.0.0 <4.0.4": ">=4.0.4",
+      "semver@<5.7.2": ">=5.7.2",
+      "serialize-javascript@>=6.0.0 <6.0.2": "6.0.2",
+      "sha.js@<=2.4.11": ">=2.4.12",
+      "smol-toml@<=1.3.0": ">=1.3.1",
+      "tmp@<=0.2.3": "0.2.4",
+      "undici@<5.28.4": ">=5.28.4",
+      "undici@<5.29.0": ">=5.29.0",
+      "undici@>=4.5.0 <5.28.5": ">=5.28.5",
+      "ws@>=7.0.0 <7.5.10": ">=7.5.10",
+      "ws@>=8.0.0 <8.17.1": "8.17.1",
+      "zod@<=3.22.2": ">=3.22.3"
     }
   },
   "simple-git-hooks": {
