--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@biomejs/biome": "^2.2.4",
     "@changesets/cli": "^3.0.0-next.0",
     "@svitejs/changesets-changelog-github-compact": "^1.2.0",
+    "@types/node": "^24.5.1",
     "@vitejs/plugin-react": "catalog:",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@wagmi/test": "workspace:*",
-    "glob": "^11.0.3",
     "happy-dom": "^18.0.1",
     "knip": "^5.30.6",
     "playwright": "1.54.1",
