--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check:unused": "pnpm clean && knip",
     "clean": "pnpm run --r --parallel clean && rm -rf packages/**/*.json.tmp",
     "deps": "pnpx taze -r",
+    "deps:ci": "pnpx actions-up",
     "dev": "pnpm dev:react",
     "dev:cli": "pnpm --filter cli dev",
     "dev:core": "pnpm --filter vite-core dev",
