--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ auditConfig:
   ignoreGhsas:
     - GHSA-g3ch-rx76-35fx 
     - GHSA-vjh7-7g9h-fjfh 
+    - GHSA-ffrw-9mx8-89p8 
 catalog:
   "@vitejs/plugin-react": "^4.3.3"
   "@tanstack/query-core": "5.49.1"
