--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -45,7 +45,7 @@
     }
   },
   "dependencies": {
-    "@base-org/account": "1.1.1",
+    "@base-org/account": "2.4.0",
     "@coinbase/wallet-sdk": "4.3.6",
     "@gemini-wallet/core": "0.2.0",
     "@metamask/sdk": "0.33.1",
@@ -53,6 +53,7 @@
     "@safe-global/safe-apps-sdk": "9.1.0",
     "@walletconnect/ethereum-provider": "2.21.1",
     "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
+    "fastestsmallesttextencoderdecoder": "1.0.22",
     "porto": "0.2.19"
   },
   "devDependencies": {
