--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev:vue": "pnpm --filter vite-vue dev",
     "docs:dev": "pnpm --filter site dev",
     "format": "biome format --write",
+    "postinstall": "pnpm preconstruct",
     "preconstruct": "pnpm run --r --filter \"./packages/**\" preconstruct",
     "preinstall": "pnpx only-allow pnpm",
     "prepare": "pnpm simple-git-hooks",
