--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,9 @@
     "/config",
     "/plugins"
   ],
+  "bin": {
+    "wagmi": "./dist/cli.js"
+  },
   "sideEffects": false,
   "type": "module",
   "typings": "./dist/types/exports/index.d.ts",
