--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
       "elliptic@<=6.6.0": ">=6.6.1",
       "esbuild@<=0.24.2": "0.25.0",
       "nanoid@<3.3.8": "3.3.8",
+      "playwright@<1.55.1": "1.55.1",
       "semver@<5.7.2": ">=5.7.2",
       "serialize-javascript@>=6.0.0 <6.0.2": "6.0.2",
       "tmp@<=0.2.3": "0.2.4",
