--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,8 @@ auditConfig:
     - GHSA-g3ch-rx76-35fx 
     - GHSA-vjh7-7g9h-fjfh 
     - GHSA-ffrw-9mx8-89p8 
+    - GHSA-qpm2-6cq5-7pq5
+    - GHSA-93m4-6634-74q7
 catalog:
   "@vitejs/plugin-react": "^4.3.3"
   "@tanstack/query-core": "5.49.1"
