feat(react,vue): export internal types

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,6 +26,7 @@
     "/codegen",
     "/connectors",
     "/experimental",
+    "/internal",
     "/query"
   ],
   "sideEffects": false,
@@ -62,6 +63,10 @@
       "types": "./dist/types/exports/experimental.d.ts",
       "default": "./dist/esm/exports/experimental.js"
     },
+    "./internal": {
+      "types": "./dist/types/exports/internal.d.ts",
+      "default": "./dist/esm/exports/internal.js"
+    },
     "./query": {
       "types": "./dist/types/exports/query.d.ts",
       "default": "./dist/esm/exports/query.js"
@@ -84,6 +89,9 @@
       ],
       "experimental": [
         "./dist/types/exports/experimental.d.ts"
+      ],
+      "internal": [
+        "./dist/types/exports/internal.d.ts"
       ],
       "query": [
         "./dist/types/exports/query.d.ts"
