--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -24,6 +24,7 @@
     "/actions",
     "/chains",
     "/connectors",
+    "/internal",
     "/nuxt",
     "/query"
   ],
@@ -53,6 +54,10 @@
       "types": "./dist/types/exports/connectors.d.ts",
       "default": "./dist/esm/exports/connectors.js"
     },
+    "./internal": {
+      "types": "./dist/types/exports/internal.d.ts",
+      "default": "./dist/esm/exports/internal.js"
+    },
     "./nuxt": {
       "types": "./dist/types/exports/nuxt.d.ts",
       "default": "./dist/esm/exports/nuxt.js"
@@ -73,6 +78,9 @@
       ],
       "connectors": [
         "./dist/types/exports/connectors.d.ts"
+      ],
+      "internal": [
+        "./dist/types/exports/internal.d.ts"
       ],
       "nuxt": [
         "./dist/types/exports/nuxt.d.ts"
