--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
       },
       "packages/react": {
         "entry": [
-          "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
+          "src/exports/{actions,chains,codegen,connectors,experimental,index,internal,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
         "ignore": [
@@ -156,7 +156,7 @@
       },
       "packages/vue": {
         "entry": [
-          "src/exports/{actions,chains,connectors,index,nuxt,query}.ts!",
+          "src/exports/{actions,chains,connectors,index,internal,nuxt,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
         "ignore": [
