--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
       "prool": "patches/prool.patch"
     },
     "overrides": {
+      "@walletconnect/logger>pino": "10.0.0",
       "cookie@<0.7.0": "0.7.0",
       "elliptic@<=6.6.0": ">=6.6.1",
       "esbuild@<=0.24.2": "0.25.0",
