--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -35,29 +35,58 @@
     "./package.json": "./package.json"
   },
   "peerDependencies": {
+    "@base-org/account": "~2.4.0",
+    "@coinbase/wallet-sdk": "~4.3.6",
+    "@gemini-wallet/core": "~0.3.1",
+    "@metamask/sdk": "~0.33.1",
+    "@safe-global/safe-apps-provider": "~0.18.6",
+    "@safe-global/safe-apps-sdk": "~9.1.0",
     "@wagmi/core": "workspace:*",
+    "@walletconnect/ethereum-provider": "~2.21.1",
+    "porto": "~0.2.35",
     "typescript": ">=5.0.4",
     "viem": "2.x"
   },
   "peerDependenciesMeta": {
+    "@base-org/account": {
+      "optional": true
+    },
+    "@coinbase/wallet-sdk": {
+      "optional": true
+    },
+    "@gemini-wallet/core": {
+      "optional": true
+    },
+    "@metamask/sdk": {
+      "optional": true
+    },
+    "@safe-global/safe-apps-provider": {
+      "optional": true
+    },
+    "@safe-global/safe-apps-sdk": {
+      "optional": true
+    },
+    "@walletconnect/ethereum-provider": {
+      "optional": true
+    },
+    "porto": {
+      "optional": true
+    },
     "typescript": {
       "optional": true
     }
   },
-  "dependencies": {
-    "@base-org/account": "2.4.0",
-    "@coinbase/wallet-sdk": "4.3.6",
-    "@gemini-wallet/core": "0.3.1",
-    "@metamask/sdk": "0.33.1",
-    "@safe-global/safe-apps-provider": "0.18.6",
-    "@safe-global/safe-apps-sdk": "9.1.0",
-    "@walletconnect/ethereum-provider": "2.21.1",
-    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
-    "porto": "0.2.35"
-  },
   "devDependencies": {
+    "@base-org/account": "catalog:",
+    "@coinbase/wallet-sdk": "catalog:",
+    "@gemini-wallet/core": "catalog:",
+    "@metamask/sdk": "catalog:",
+    "@safe-global/safe-apps-provider": "catalog:",
+    "@safe-global/safe-apps-sdk": "catalog:",
     "@wagmi/core": "workspace:*",
-    "msw": "^2.4.9"
+    "@walletconnect/ethereum-provider": "catalog:",
+    "msw": "^2.4.9",
+    "porto": "catalog:"
   },
   "contributors": [
     "awkweb.eth <t@wevm.dev>",
