--- a/site/package.json
+++ b/site/package.json
@@ -8,7 +8,7 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
-    "@shikijs/vitepress-twoslash": "1.22.2",
+    "@shikijs/vitepress-twoslash": "3.14.0",
     "@tanstack/query-core": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@tanstack/vue-query": "catalog:",
@@ -21,8 +21,9 @@
     "react": "catalog:",
     "unocss": "^0.59.4",
     "viem": "2.*",
-    "vitepress": "1.5.0",
-    "vitepress-plugin-llms": "^1.7.5",
+    "vitepress": "1.6.3",
+    "vitepress-plugin-group-icons": "^1.6.5",
+    "vitepress-plugin-llms": "^1.8.1",
     "vue": "catalog:",
     "wagmi": "workspace:*"
   }
