docs: migration guide

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ auditConfig:
     - GHSA-qpm2-6cq5-7pq5
     - GHSA-93m4-6634-74q7
     - GHSA-29xp-372q-xqph
+autoInstallPeers: false
 catalog:
   "@base-org/account": "2.4.0"
   "@coinbase/wallet-sdk": "4.3.6"
@@ -24,6 +25,7 @@ catalog:
   react-dom: "18.3.1"
   react: "18.3.1"
   vue: "3.4.27"
+linkWorkspacePackages: deep
 minimumReleaseAge: 1440
 minimumReleaseAgeExclude:
   - "@wagmi/cli"
@@ -33,6 +35,17 @@ minimumReleaseAgeExclude:
   - "@wagmi/vue"
   - porto
   - wagmi
+overrides: 
+  "cookie@<0.7.0": "0.7.0"
+  "elliptic@<=6.6.0": ">=6.6.1"
+  "esbuild@<=0.24.2": "0.25.0"
+  "hono@>=1.1.0 <4.10.2": ">=4.10.2"
+  "nanoid@<3.3.8": "3.3.8"
+  "playwright@<1.55.1": "1.55.1"
+  "semver@<5.7.2": ">=5.7.2"
+  "serialize-javascript@>=6.0.0 <6.0.2": "6.0.2"
+  "tmp@<=0.2.3": "0.2.4"
+  "ws@>=8.0.0 <8.17.1": "8.17.1"
 packages:
   - packages/*
   - "!packages/register-tests"
@@ -40,3 +53,12 @@ packages:
   - packages/register-tests/*
   - playgrounds/*
   - site
+patchedDependencies:
+  prool: "patches/prool.patch" 
+peerDependencyRules:
+  ignoreMissing:
+    - "@algolia/client-search"
+    - "react"
+    - "react-native"
+    - "search-insights"
+trustPolicy: no-downgrade
