--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
       "prool": "patches/prool.patch"
     },
     "overrides": {
+      "@metamask/connect-evm": "file:../connect-monorepo/packages/connect-evm",
+      "@metamask/connect-multichain": "file:../connect-monorepo/packages/connect-multichain",
       "@walletconnect/logger>pino": "10.0.0",
       "cookie@<0.7.0": "0.7.0",
       "elliptic@<=6.6.0": ">=6.6.1",
