--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -48,12 +48,12 @@
     "@base-org/account": "2.4.0",
     "@coinbase/wallet-sdk": "4.3.6",
     "@gemini-wallet/core": "0.3.2",
-    "@metamask/sdk": "0.33.1",
     "@safe-global/safe-apps-provider": "0.18.6",
     "@safe-global/safe-apps-sdk": "9.1.0",
     "@walletconnect/ethereum-provider": "2.21.1",
     "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
-    "porto": "0.2.35"
+    "porto": "0.2.35",
+    "@metamask/connect-evm": "file:../../connect-monorepo/packages/connect-evm"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
