--- a/playgrounds/vite-vue/package.json
+++ b/playgrounds/vite-vue/package.json
@@ -14,9 +14,9 @@
     "vue": ">=3.4.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "catalog:",
     "buffer": "^6.0.3",
-    "vite": "^5.4.21",
-    "vue-tsc": "^2.0.6"
+    "vite": "catalog:",
+    "vue-tsc": "3.1.3"
   }
 }
