--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,10 +19,12 @@ catalog:
   "@types/react": "18.3.1"
   "@types/react-dom": "18.3.0"
   "@vitejs/plugin-react": "^4.3.3"
+  "@vitejs/plugin-vue": "6.0.1"
   "@walletconnect/ethereum-provider": "2.21.1"
   porto: "0.2.35"
   react-dom: "18.3.1"
   react: "18.3.1"
+  vite: "7.2.2"
   vue: "3.4.27"
 linkWorkspacePackages: deep
 minimumReleaseAge: 1440
