--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -131,7 +131,7 @@ jobs:
           version: nightly
 
       - name: Install Playwright
-        run: pnpx playwright@1.55.1 install --with-deps
+        run: pnpm exec playwright install chromium --with-deps
 
       - name: Run tests
         uses: nick-fields/retry@ce71cc2ab81d554ebbe88c79ab5975992d79ba08
