--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -64,3 +64,9 @@ peerDependencyRules:
 trustPolicy: no-downgrade
 trustPolicyExclude:
   - "@coinbase/cdp-sdk@1.38.4"
+  - "@noble/curves@1.8.0"
+  - "@noble/hashes@1.7.0"
+  - chokidar@4.0.3
+  - semver@6.3.1
+  - undici@6.22.0
+  - vite@5.4.21
