--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,14 +16,14 @@ catalog:
   "@tanstack/query-core": "5.49.1"
   "@tanstack/react-query": "5.49.2"
   "@tanstack/vue-query": "5.49.1"
-  "@types/react": "18.3.1"
-  "@types/react-dom": "18.3.0"
+  "@types/react": "^19.2.0"
+  "@types/react-dom": "^19.2.0"
   "@vitejs/plugin-react": "^4.3.3"
   "@vitejs/plugin-vue": "6.0.1"
   "@walletconnect/ethereum-provider": "2.21.1"
   porto: "0.2.35"
-  react-dom: "18.3.1"
-  react: "18.3.1"
+  react-dom: "19.2.0"
+  react: "19.2.0"
   vite: "7.2.2"
   vue: "3.4.27"
 linkWorkspacePackages: deep
