--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "simple-git-hooks": "^2.11.1",
     "typescript": "5.9.2",
     "viem": "2.38.0",
+    "vite-plugin-react-fallback-throttle": "^0.1.1",
     "vitest": "^4.0.8",
     "vitest-browser-react": "^2.0.2"
   },
