--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ auditConfig:
     - GHSA-93m4-6634-74q7 # vite@>=7.1.0 <=7.1.10
     - GHSA-29xp-372q-xqph # tar@=7.5.1
     - GHSA-mh29-5h37-fv8m # js-yaml@>=4.1.1
+    - GHSA-5j98-mcp5-4vw2 # glob>=11.1.0
 autoInstallPeers: false
 catalog:
   '@base-org/account': 2.4.0
