--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,11 +1,13 @@
 auditConfig:
   ignoreGhsas:
-    - GHSA-g3ch-rx76-35fx 
-    - GHSA-vjh7-7g9h-fjfh 
-    - GHSA-ffrw-9mx8-89p8 
-    - GHSA-qpm2-6cq5-7pq5
-    - GHSA-93m4-6634-74q7
     - GHSA-29xp-372q-xqph
+    - GHSA-5j98-mcp5-4vw2
+    - GHSA-93m4-6634-74q7
+    - GHSA-ffrw-9mx8-89p8 
+    - GHSA-g3ch-rx76-35fx 
+    - GHSA-mh29-5h37-fv8m
+    - GHSA-qpm2-6cq5-7pq5
+    - GHSA-vjh7-7g9h-fjfh 
 catalog:
   "@vitejs/plugin-react": "^4.3.3"
   "@tanstack/query-core": "5.49.1"
