ci: pkg-pr-new tweaks

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,6 +41,8 @@ jobs:
           pnpm clean
           pnpm changeset:prepublish
           pnpx pkg-pr-new publish --pnpm --compact './packages/*'
+        env:
+          PKG_PR_NEW: true
 
   size:
     name: Size
