--- a/package.json
+++ b/package.json
@@ -62,10 +62,11 @@
     "sherif": "^1.0.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "5.9.2",
-    "viem": "2.38.0",
+    "viem": "https://pkg.pr.new/viem@4107",
     "vite-plugin-react-fallback-throttle": "^0.1.1",
     "vitest": "^4.0.8",
-    "vitest-browser-react": "^2.0.2"
+    "vitest-browser-react": "^2.0.2",
+    "zile": "^0.0.7"
   },
   "packageManager": "pnpm@10.22.0",
   "devEngines": {
