--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -53,7 +53,7 @@
     "@walletconnect/ethereum-provider": "2.21.1",
     "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
     "porto": "0.2.35",
-    "@metamask/connect-evm": "file:../../connect-monorepo/packages/connect-evm"
+    "@metamask/connect-evm": "0.1.0"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
