--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "sherif": "^1.0.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "5.9.2",
-    "viem": "https://pkg.pr.new/viem@4107",
+    "viem": "https://pkg.pr.new/viem@3a62d00",
     "vite-plugin-react-fallback-throttle": "^0.1.1",
     "vitest": "^4.0.8",
     "vitest-browser-react": "^2.0.2"
