feat: setup for @wagmi/solid

--- a/package.json
+++ b/package.json
@@ -152,6 +152,10 @@
         "ignoreDependencies": [
           "nuxt"
         ]
+      },
+      "packages/solid": {
+        "entry": [],
+        "ignore": []
       }
     }
   }
