--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,6 +18,7 @@ catalog:
   '@safe-global/safe-apps-sdk': 9.1.0
   '@tanstack/query-core': 5.49.1
   '@tanstack/react-query': 5.49.2
+  '@tanstack/solid-query': 5.90.15
   '@tanstack/vue-query': 5.49.1
   '@types/react': ^19.2.0
   '@types/react-dom': ^19.2.0
@@ -29,7 +30,9 @@ catalog:
   porto: 0.2.35
   react: 19.2.0
   react-dom: 19.2.0
+  solid-js: 1.9.10
   vite: 7.2.2
+  vite-plugin-solid: 2.11.10
   vue: 3.4.27
 linkWorkspacePackages: deep
 minimumReleaseAge: 1440
@@ -39,6 +42,7 @@ minimumReleaseAgeExclude:
   - '@wagmi/connectors'
   - '@wagmi/core'
   - '@wagmi/test'
+  - '@wagmi/solid'
   - '@wagmi/vue'
   - abitype
   - porto
