--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@biomejs/biome": "^2.2.4",
     "@changesets/cli": "^3.0.0-next.0",
     "@svitejs/changesets-changelog-github-compact": "^1.2.0",
+    "@tanstack/solid-query": "catalog:",
     "@types/node": "^24.5.1",
     "@vitejs/plugin-react": "catalog:",
     "@vitest/browser": "^4.0.8",
@@ -59,9 +60,11 @@
     "react-dom": "catalog:",
     "sherif": "^1.0.0",
     "simple-git-hooks": "^2.11.1",
+    "solid-js": "catalog:",
     "typescript": "5.9.2",
     "viem": "2.38.0",
     "vite-plugin-react-fallback-throttle": "^0.1.1",
+    "vite-plugin-solid": "catalog:",
     "vitest": "^4.0.8",
     "vitest-browser-react": "^2.0.2"
   },
