--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -42,6 +42,7 @@ minimumReleaseAgeExclude:
   - '@wagmi/vue'
   - porto
   - wagmi
+  - viem
 overrides:
   cookie@<0.7.0: 0.7.0
   elliptic@<=6.6.0: '>=6.6.1'
